# codetest

./: .pre-commit-config.yaml  README.md  codetest27.yaml  codetest36.yaml  codetest37.yaml  pyproject.toml  requirements.txt
Exercise1/: Exercise1.ipynb  function.py  main.py
Exercise2/: docker-compose.yml
Exercise2/importer_xml_postgresql/: codetest.sql  importer.py  test.xml
Exercise2/mysite/: Dockerfile  requirements.txt
Exercise2/mysite/mysite/: settings.py  urls.py
Exercise2/mysite/products/: models.py  urls.py  views.py
Exercise2/postgresql/: Dockerfile  importer.py
exercise1/: Exercise1.ipynb  function.py  main.py
exercise2/: docker-compose.yml
exercise2/docs/: architecture.puml
exercise2/mysite/: .env.example  Dockerfile  manage.py  requirements.txt
exercise2/mysite/mysite/: settings.py  urls.py  wsgi.py
exercise2/mysite/products/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
exercise2/nginx/conf.d/: local.conf
exercise2/postgresql/: Dockerfile  importer.py
