[project]
name = "codetest"
version = "1.0.0"
authors = [
  { name="alvertogit" },
]
description = "A test project combining Django and PostgreSQL"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/alvertogit/codetest"

[tool.ruff]
extend-include = ["*.ipynb"]

line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
